--- a/blogroll/index.html
+++ b/blogroll/index.html
@@ -2,8 +2,8 @@
 layout: default
 title: "Blogroll"
 active_title: "Blogroll"
-prelink_js: ['https://code.jquery.com/jquery-2.2.4.min.js']
-prelink_css: ['/assets/css/grid_profile_cycle.css', '/assets/css/grid_profile_net.css']
+prelink_js: []
+prelink_css: []
 afterlink_js: []
 afterlink_css: []
 preload_js: []
