--- a/blogroll/index.html
+++ b/blogroll/index.html
@@ -14,6 +14,6 @@ on_load:
   call: ""
   def: ''
 ---
-{% include grid_profile_cycle.html %}
+{% include grid_profile_cycle.html title="the <span>Senorita</span>" caption="Designer" desc=site.description image="/assets/images/avatar.jpg" %}
 
-{% include grid_profile_net.html %}
+{% include grid_profile_net.html title="Senorita" subtitle="Just A Designer" desc=site.description image="/assets/images/avatar.jpg" %}
