--- a/creative/index.html
+++ b/creative/index.html
@@ -4,7 +4,7 @@ title: "Creative"
 description: "Build, Test, Discover and Create the New World."
 ---
 {% assign converted_list = '' | split: '/' %}
-{% for post in include.list %}
+{% for create in site.creative %}
 	{% assign tempSubArray = '' | split: '/' %}
 	<!-- element[0]: title.first-word -->
 	<!-- element[1]: title.other-word -->
