--- a/creative/index.html
+++ b/creative/index.html
@@ -23,4 +23,4 @@ description: "Build, Test, Discover and Create the New World."
 
 {% assign outer_list = '' | split: '/' %}
 {% assign outer_list = outer_list | push: converted_list %}
-{% include grid_image_overlay_fashion_list.html list=outer_list title=include.title title_url=include.title_url desc=include.desc readmore=include.readmore readmore_title=include.readmore_title cols=include.cols %}
+{% include grid_image_overlay_fashion_list.html list=outer_list desc=" " cols=3 %}
