--- a/_creative/macos.html
+++ b/_creative/macos.html
@@ -1,6 +1,7 @@
 ---
 layout: macos_iframe
 title: "macOS"
+desc: "A macOS desktop replica page. For now, only the Safari works."
 cover:
   url: 'macOS.jpg'
   format: 'jpeg'
