--- a/creative/index.html
+++ b/creative/index.html
@@ -2,8 +2,8 @@
 layout: default
 title: "Creative"
 description: "Build, Test, Discover and Create the New World."
-#style: 'overlay_fashion'
-style: 'overlay_box'
+style: 'overlay_fashion'
+#style: 'overlay_box'
 cols: 2
 ---
 {% assign converted_list = '' | split: '/' %}
