--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@ on_load:
 	{% for post in site.posts limit: 3 %}
 		{% assign recent_posts = recent_posts | push: post %}
 	{% endfor %}
-	{% include grid_posts_list.html sectionid="recent-posts" list=recent_posts cols=3 title='Recent Posts' title_url="/posts/index.html" desc='Writing on various topics including travel, finance and technology.' readmore_title="Read More" readmore='/posts/index.html' %}
+  {% include grid_image_overlay_bw_rect_posts_list.html sectionid="recent-posts" list=recent_posts cols=3 title='Recent Posts' title_url="/posts/index.html" desc='Writing on various topics including travel, finance and technology.' readmore_title="Read More" readmore='/posts/index.html' %}
+	<!-- {% include grid_posts_list.html sectionid="recent-posts" list=recent_posts cols=3 title='Recent Posts' title_url="/posts/index.html" desc='Writing on various topics including travel, finance and technology.' readmore_title="Read More" readmore='/posts/index.html' %} -->
 
 	<!-- SEPARATOR -->
 
