--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@ cols: 3
 		{% capture this_media_url %}{% include gallery_media_url.html item=album.media.first %}{% endcapture %}
 		{% capture this_thumbnail_url %}{% include gallery_media_thumbnail_url.html item=album.media.first %}{% endcapture %}
 
-		{% assign this_item = this_item | push: this_media_url %}
-		{% assign this_item = this_item | push: '' %}
-		{% assign this_item = this_item | push: '' %}
-		{% assign this_item = this_item | push: this_thumbnail_url %}
+    {% assign this_item = this_item | push: album.title %}
+		{% assign this_item = this_item | push: album.desc %}
+    {% assign this_item = this_item | push: this_thumbnail_url %}
+    {% assign this_item = this_item | push: this_media_url %}
 		{% assign this_item = this_item | push: album.media.first.format %}
 		{% assign this_item = this_item | push: album.media.first.type %}
 
@@ -43,5 +43,5 @@ cols: 3
 	{% endfor %}
 	{% assign recent_media_container = '' | split: '/' %}
 	{% assign recent_media_container = recent_media_container | push: recent_media %}
-	{% include grid_list.html sectionid="recent-meida" list=recent_media_container cols=page.cols title='Recent Media' title_url="/gallery/index.html" desc='Passionate about photography and enjoy taking pictures all around the world.' readmore_title="View More" readmore='/gallery/index.html' gallery=true %}
+	{% include grid_image_overlay_camera_list.html sectionid="recent-meida" list=recent_media_container cols=page.cols title='Recent Media' title_url="/gallery/index.html" desc='Passionate about photography and enjoy taking pictures all around the world.' readmore_title="View More" readmore='/gallery/index.html' gallery=true %}
 	{% include gallery_lightbox.html %}
