--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ on_load:
   call: ""
   def: ''
 cols: 3
+posts_style: 'scroll'
 ---
 	{% assign recent_posts = '' | split: '/' %}
 	{% for post in site.posts limit: page.cols %}
@@ -44,5 +45,9 @@ cols: 3
 	{% assign recent_media_container = '' | split: '/' %}
 	{% assign recent_media_container = recent_media_container | push: recent_media %}
 
-	{% include grid_image_overlay_camera_list.html sectionid="recent-meida" list=recent_media_container cols=page.cols title='Recent Media' title_url="/gallery/index.html" desc='Passionate about photography and enjoy taking pictures all around the world.' readmore_title="View More" readmore='/gallery/index.html' %}
+  {% if page.posts_style = 'scroll' %}
+    {% include grid_image_overlay_simple_scroll_posts_list.html sectionid="recent-meida" list=recent_media_container cols=page.cols title='Recent Media' title_url="/gallery/index.html" desc='Passionate about photography and enjoy taking pictures all around the world.' readmore_title="View More" readmore='/gallery/index.html' %}
+  {% elsif page.posts_style = 'camera' %}
+  	{% include grid_image_overlay_camera_list.html sectionid="recent-meida" list=recent_media_container cols=page.cols title='Recent Media' title_url="/gallery/index.html" desc='Passionate about photography and enjoy taking pictures all around the world.' readmore_title="View More" readmore='/gallery/index.html' %}
+  {% endif %}
 	{% include gallery_lightbox.html %}
