--- a/_creative/fJSFiddle.html
+++ b/_creative/fJSFiddle.html
@@ -1,6 +1,13 @@
 ---
 layout: null
 title: "fJSFiddle"
+desc: "A fake JSFiddle web app."
+#cover:
+#  url: 'fashion.jpg'
+#  format: 'jpeg'
+cover:
+  url: 'fJSFiddle.jpg'
+  format: 'jpeg'
 ---
 <!DOCTYPE html>
 <html lang="en">
