--- a/_creative/fJSFiddle.html
+++ b/_creative/fJSFiddle.html
@@ -2,12 +2,9 @@
 layout: null
 title: "fJSFiddle"
 desc: "A fake JSFiddle web app."
-#cover:
-#  url: 'fashion.jpg'
-#  format: 'jpeg'
 cover:
-  url: 'fJSFiddle.jpg'
-  format: 'jpeg'
+  url: 'fJSFiddle.png'
+  format: 'png'
 ---
 <!DOCTYPE html>
 <html lang="en">
