--- a/creative/index.html
+++ b/creative/index.html
@@ -20,7 +20,7 @@ cols: 2
 		<!-- element[4]: url -->
 		{% assign tempSubArray = tempSubArray | push: 'The' %}
 		{% assign tempSubArray = tempSubArray | push: create.title %}
-		{% assign tempSubArray = tempSubArray | push: 'is timeless.' %}
+		{% assign tempSubArray = tempSubArray | push: create.desc %}
 		{% assign tempSubArray = tempSubArray | push: the_creative_img %}
 		{% assign tempSubArray = tempSubArray | push: create.url %}
 
@@ -33,7 +33,7 @@ cols: 2
 		<!-- element[4]: url -->
 		{% assign tempSubArray = tempSubArray | push: 'The' %}
 		{% assign tempSubArray = tempSubArray | push: create.title %}
-		{% assign tempSubArray = tempSubArray | push: 'is timeless.' %}
+		{% assign tempSubArray = tempSubArray | push: create.desc %}
 		{% assign tempSubArray = tempSubArray | push: the_creative_img %}
 		{% assign tempSubArray = tempSubArray | push: create.url %}
 
