--- a/_creative/fJSFiddle.html
+++ b/_creative/fJSFiddle.html
@@ -1,7 +1,7 @@
 ---
 layout: null
 title: "fJSFiddle"
-desc: "A fake JSFiddle web app."
+desc: "Fake JSFiddle web app"
 cover:
   url: 'fJSFiddle.png'
   format: 'png'
