--- a/_creative/macos.html
+++ b/_creative/macos.html
@@ -1,7 +1,7 @@
 ---
 layout: macos_iframe
 title: "macOS"
-desc: "A macOS desktop replica page. For now, only the Safari works."
+desc: "Desktop replica page"
 cover:
   url: 'macOS.jpg'
   format: 'jpeg'
