--- a/_creative/fashion.html
+++ b/_creative/fashion.html
@@ -2,7 +2,7 @@
 layout: null
 title: "Fashion"
 logo: '/assets/images/icons/HoldCat/HoldCat.svg'
-desc: "A fashion concept page. Scroll to see the effect."
+desc: "Concept effect page"
 #cover:
 #  url: 'fashion.jpg'
 #  format: 'jpeg'
