--- a/_creative/fashion.html
+++ b/_creative/fashion.html
@@ -2,7 +2,7 @@
 layout: null
 title: "Fashion"
 logo: '/assets/images/icons/HoldCat/HoldCat.svg'
-desc: "Concept effect"
+desc: 'Concept effect'
 cover:
   url: 'fashion.gif'
   format: 'gif'
