--- a/_creative/fashion.html
+++ b/_creative/fashion.html
@@ -1,8 +1,8 @@
 ---
 layout: null
 title: "Fashion"
-logo: '/assets/images/icons/HoldCat/HoldCat.svg'
-desc: 'Concept effect'
+logo: "/assets/images/icons/HoldCat/HoldCat.svg"
+desc: "Concept effect"
 cover:
   url: 'fashion.gif'
   format: 'gif'
@@ -11,7 +11,7 @@ sections:
     front: ['front0.jpg', 'front1.jpg']
     text: ['Black is', 'timeless. Black is', 'the colour of', 'Eternity.']
   - backgroud: 'forest2.jpg'
-    front: ['front2.jpg', 'front3.jpg']	😲😲😲😲
+    front: ['front2.jpg', 'front3.jpg']
   - backgroud: 'forest3.jpg'
     front: ['front4.jpg', 'front5.jpg']
   - backgroud: 'forest4.jpg'
