--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ posts_style: 'scroll'
 
 	{% assign recent_media = '' | split: '/' %}
 	{% for album in site.gallery limit: page.limit %}
-    {% for item in album.media limit: 2 %}
+    {% for item in album.media reversed limit: 2 %}
   		{% assign this_item = '' | split: '/' %}
 
   		{% comment %}{% assign media_url = site.url | append: '/gallery/detail/?album=' | append: page.unique | append: '&idx=' | append: forloop.index | append: "&type=" | append: item.type %}{% endcomment %}
