--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ afterload_css: []
 on_load:
   call: ""
   def: ''
-limit: 9
+limit: 6
 cols: 3
 posts_style: 'scroll'
 ---
@@ -28,27 +28,31 @@ posts_style: 'scroll'
   {% endif %}
 
 	<!-- SEPARATOR -->
+  {% assign all_pics = '' | split: '/' %}
+  {% for album in site.gallery %}
+    {% for pic in album %}
+      {% assign all_pics = all_pics | push: pic %}
+    {% endfor %}
+  {% endfor %}
+  {% assign all_pics_sorted = all_pics | sort: 'date' | reverse %}
 
 	{% assign recent_media = '' | split: '/' %}
-	{% for album in site.gallery limit: page.limit %}
-    {% assign new_at_first = album.media | reverse %}
-    {% for item in new_at_first limit: 3 %}
-  		{% assign this_item = '' | split: '/' %}
+  {% for item in all_pics_sorted limit: page.limit %}
+		{% assign this_item = '' | split: '/' %}
 
-  		{% comment %}{% assign media_url = site.url | append: '/gallery/detail/?album=' | append: page.unique | append: '&idx=' | append: forloop.index | append: "&type=" | append: item.type %}{% endcomment %}
+		{% comment %}{% assign media_url = site.url | append: '/gallery/detail/?album=' | append: page.unique | append: '&idx=' | append: forloop.index | append: "&type=" | append: item.type %}{% endcomment %}
 
-  		{% capture this_media_url %}{% include gallery_media_url.html item=item %}{% endcapture %}
-  		{% capture this_thumbnail_url %}{% include gallery_media_thumbnail_url.html item=item %}{% endcapture %}
+		{% capture this_media_url %}{% include gallery_media_url.html item=item %}{% endcapture %}
+		{% capture this_thumbnail_url %}{% include gallery_media_thumbnail_url.html item=item %}{% endcapture %}
 
-      {% assign this_item = this_item | push: album.title %}
-  		{% assign this_item = this_item | push: album.desc %}
-      {% assign this_item = this_item | push: this_thumbnail_url %}
-      {% assign this_item = this_item | push: this_media_url %}
-      {% assign this_item = this_item | push: item.type %}
-  		{% assign this_item = this_item | push: item.format %}
+    {% assign this_item = this_item | push: pic.format %}
+		{% assign this_item = this_item | push: pic.url %}
+    {% assign this_item = this_item | push: this_thumbnail_url %}
+    {% assign this_item = this_item | push: this_media_url %}
+    {% assign this_item = this_item | push: item.type %}
+		{% assign this_item = this_item | push: item.format %}
 
-  		{% assign recent_media = recent_media | push: this_item %}
-    {% endfor %}
+		{% assign recent_media = recent_media | push: this_item %}
 	{% endfor %}
 	{% assign recent_media_container = '' | split: '/' %}
 	{% assign recent_media_container = recent_media_container | push: recent_media %}
