--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@ posts_style: 'scroll'
 	<!-- SEPARATOR -->
   {% assign all_pics = '' | split: '/' %}
   {% for album in site.gallery %}
-    {% for pic in album.media %}
-      {% assign all_pics = all_pics | push: pic %}
-    {% endfor %}
+    {% if album.published %}
+      {% for pic in album.media %}
+        {% assign all_pics = all_pics | push: pic %}
+      {% endfor %}
+    {% endif %}
   {% endfor %}
   {% assign all_pics_sorted = all_pics | sort: 'date' | reverse %}
 
