--- a/tarot/soul/index.html
+++ b/tarot/soul/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Soul Cards Tarot"
-layout: default
+layout: default_toc
 ---
 <style type="text/css" media="screen">
   .card_wrapper {
