--- a/tarot/soul/index.html
+++ b/tarot/soul/index.html
@@ -111,6 +111,7 @@ layout: default_toc
     text-underline-position: under;
     font-size: 12px;
     text-transform: uppercase;
+    border-width: 0 0 4px 0;
   }
   .card_description_wrapper {
     text-align: justify;
