--- a/tarot/soul/index.html
+++ b/tarot/soul/index.html
@@ -117,9 +117,9 @@ layout: default_toc
     text-align: justify;
     font-family: "Cormorant";
     margin-bottom: 0;
-    width: 50%;
+    width: 70%;
     text-align: center;
-    margin-left: 25%;
+    margin-left: calc((100% - 70%) * 0.5);
     margin-top: 30px;
   }
   .card_description_title {
