--- a/tarot/soul/index.html
+++ b/tarot/soul/index.html
@@ -26,7 +26,7 @@ style: "grid"
         {% assign card_img = site.url | append: '/assets/images/tarot/' | append: card_sec_title | append: '/' | append: card_grp_title | append: '/' | append: card_crd_title | append: '.webp' %}
         {% assign cards_list = cards_list | push: card_img %}
       {% endfor %}
-      {% include grid_image_overlay_box_list.html title=group.title cols=3 %}
+      {% include grid_image_overlay_box_list.html title=group.title list=cards_list bgcolor='#fff' color='#000' subcolor='#bbb' cols=3 %}
     {% endfor %}
   {% endfor %}
 
